welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:10: error: not found: value reucle
  Brosse() ; avance() ; avance() ; Brosse() ; recule() ; gauche() ; avance() ; Brosse() ; recule() ; reucle() ; Brosse() 
                                                                                                     ^